UI - Fixing UI - Favicons - Turning off favicons misaligns other icons on lister page #3321

--- a/changedetectionio/static/styles/scss/parts/_lister_extra.scss
+++ b/changedetectionio/static/styles/scss/parts/_lister_extra.scss
@@ -6,18 +6,18 @@
       }
     }
   }
-  &.favicon-enabled {
-    tr {
-      /* make the icons and the text inline-ish */
-      td.inline.title-col {
-        .flex-wrapper {
-          display: flex;
-          align-items: center;
-          gap: 4px;
-        }
+
+  tr {
+    /* make the icons and the text inline-ish */
+    td.inline.title-col {
+      .flex-wrapper {
+        display: flex;
+        align-items: center;
+        gap: 4px;
       }
     }
   }
+
 
   td,
   th {
